--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prismicio/client": "^7.16.0",
     "@prismicio/next": "^1.7.2",
     "@prismicio/react": "^3.0.0",
+    "@prismicio/richtext": "^2.1.5",
     "@tailwindcss/postcss": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "embla-carousel-auto-scroll": "^8.5.2",
