test output out file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,4 @@ jobs:
           server: ftpupload.net
           username: b22_39619064
           password: dN6Qb7DKP2cKXBD
-          local-dir: ./next/
+          local-dir: ./out/
